--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "setup prettier with eslint, husly and lint-staged ",
   "main": "index.js",
   "scripts": {
-    "precommit": "lint-staged",
+    "precommit": "npm run format",
     "format": "prettier --write \"src/**/*.+(js|md|ts|css|sass|less|graphql|json)\"",
     "lint": "eslint '**/*.js' --quiet",
     "test": "echo \"Error: no test specified\" && exit 1"
